--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <nav>
       <ul>
-        <li><a id="about">About</a></li>
+        <li><a id="date">Date</a></li>
         <li><a id="author">Author</a></li>
-        <li><a id="blog">Blog posts</a></li>
+        <li><a id="blog">Blog quotes</a></li>
       </ul>
     </nav>
     <div id="container"></div>
